2008-05-03 mentaer <sstein@geo.unizh.ch>
	  changes to enable the loading of Mr.SID layers using AddSIDLayerPlugin
	  but also enabling of zooming
	  org.openjump.core.ui.plugin.layer.AddSIDLayerPlugIn
	  org.openjump.core.ui.plugin.wms.ZoomToWMSPlugIn
	  org.openjump.io.SIDLayer
	  com.vividsolutions.jump.workbench.model.WMSLayer
	  
2008-05-03 mentaer <sstein@geo.unizh.ch>
	  changed interface ReferencedImageFactory.isAvailable
	  to #.isAvailable(WorkbenchContext wbContext)
	  this enables access to the plugin directory
	  
2008-04-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/SLDImporter.java:
      Trimming parsed values.

2008-04-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/wms/Parser.java:
      Fixed parsing of capabilities without GetFeatureInfo section.

2008-04-27 mentaer <sstein@geo.unizh.ch>
	  added wms-default url to http://openaerialmap.org/wms/, bug [1944641]
	  
2008-04-27 mentaer <sstein@geo.unizh.ch>
	  translation for several files

2008-04-27 mentaer <sstein@geo.unizh.ch>
	  fixed bug [1729554] in extension manager
	  mod:  de.latlon.deejump.plugin.manager.ExtensionHelper.java
	  		language files
	  		
2008-04-05 mentaer <sstein@geo.unizh.ch>
	  added Auto Complete Polygon Tool from Uni Hannover via Malte W.
	  new: 	org.openjump.core.ui.plugin.edittoolbox.cursortools.AutoCompletePolygonCursorTool.java
	  		org.openjump.core.ui.plugin.edittoolbox.cursortools.AutoCompletePoly.gif
	  		org.openjump.core.ui.plugin.edittoolbox.AutoCompletePolygonPlugIn.java
	  mod:  org.openjump.OpenJumpConfiguration.java
	  		language files
	  
2008-04-06 mmichaud <michael.michaud@free.fr>
        * Added two plugins and updated language files
          com.vividsolutions.jump.workbench.JUMPConfiguration
             -> remove a MenuSeparator
          com.vividsolutions.jump.workbench.ui.MenuNames
             -> add the Synchronization menu
          com.vividsolutions.jump.workbench.ui.plugin.FeatureInstaller